--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         </div>
     </div id="colorBtn">
     <form>
-        <fieldset>
+         <fieldset>
                 <legend>Choose a colour!</legend>
                 <input type="radio" name="color" id="black" value="black" checked>
                 <label for="black">Black</label>
 
                 <input type="radio" name="color" id="random" value="random">
-                <label for="random">Random</label>
+                <label for="random">Rainbow</label>
 
                 <input type="radio" name="color" id="darken" value="darken">
                 <label for="darken">Darken</label>
-        </fieldset>
+            </fieldset>
     </form>
     <script src="myScript.js"></script>
 </body>
